[Nestlé Até Você] Atualizando a requisição